--- a/try2.ipynb
+++ b/try2.ipynb
@@ -1237,7 +1237,7 @@
     "xmin = zl[np.argmin(DC)]\n",
     "ymin = DC.min()\n",
     "plt.annotate('DC mínima:'+str(xmin), xy=(xmin, ymin), xytext=(1.1, 2*10**27), arrowprops=dict(facecolor='black', shrink=0.05))\n",
-    "plt.text(s='Menor Dc -> maior efeito de lente \\n lente ~metade do caminho', x=0.5, y=4*10**27)\n",
+    "plt.text(s='Menor Dc -> maior efeito de lente \\n z_lens ~metade de z_source', x=0.5, y=4*10**27)\n",
     "\n",
     "plt.show()\n",
     "\n"
