--- a/Database/Scraping/scraping_ml.ipynb
+++ b/Database/Scraping/scraping_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 973,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/home/viviane/GravLens/Scraping/masterlens/masterlens_44.html\"  # list with dfs from tables\n",
-    "#filename = '/home/vivianemm/PycharmProjects/GravLens/Scraping/masterlens/masterlens_1.html'\n",
+    "#filename = \"/home/viviane/GravLens/Scraping/masterlens/masterlens_44.html\"  # list with dfs from tables\n",
+    "filename = '/home/vivianemm/PycharmProjects/GravLens/Database/Scraping/masterlens/masterlens_1.html'\n",
     "df_list = pd.read_html(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 948,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -39,30 +39,20 @@
       "[0 1]\n",
       "[0 1]\n",
       "[0 1]\n",
-      "[0 1 2 3]\n",
-      "['External Links:' 'External Links:.1']\n",
-      "['Added:' 'Added:.1']\n",
-      "[0 1]\n",
-      "[0 1 2 3]\n",
       "[0 1 2]\n",
-      "['Unnamed: 0' 'Unnamed: 1' 'Unnamed: 2' 'Unnamed: 3']\n",
-      "[0 1 2 3 4 5 6 7]\n",
-      "['SDSS' 'Unnamed: 1' 'Filter' 'Band' 'Lens Magnitude' 'Flux [nmaggie]'\n",
-      " 'Reff [″]' 'axis ratio (AB)' 'PA [° E of N]' 'Source Magnitude'\n",
-      " 'Program Observations']\n",
-      "['HST' 'Unnamed: 1' 'Filter' 'Band' 'Lens Magnitude' 'Flux [mJy]'\n",
-      " 'Reff [″]' 'axis ratio (AB)' 'PA [° E of N]' 'Source Magnitude'\n",
-      " 'Program Observations']\n",
-      "[('Lens Plane Images:', 'No.') ('Lens Plane Images:', 'Label')\n",
-      " ('Lens Plane Images:', 'z') ('Lens Plane Images:', 'z_err')\n",
-      " ('Lens Plane Images:', 'Flux') ('Lens Plane Images:', 'Mag')]\n",
-      "[('Source Plane Images:', 'No.') ('Source Plane Images:', 'Label')\n",
-      " ('Source Plane Images:', 'z') ('Source Plane Images:', 'z_err')\n",
-      " ('Source Plane Images:', 'r') ('Source Plane Images:', 'θ')\n",
-      " ('Source Plane Images:', 'Flux') ('Source Plane Images:', 'Mag')\n",
-      " ('Source Plane Images:', 'μ')]\n",
       "[0 1]\n",
-      "[('Time Delays:', 'Image -- Image') ('Time Delays:', 'Time Delay (days)')]\n",
+      "[0 1]\n",
+      "[0 1]\n",
+      "[0 1 2 3]\n",
+      "[0 1]\n",
+      "[0 1 2 3]\n",
+      "[0 1 2 3 4 5 6 7]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "[0 1 2 3 4 5]\n",
+      "[0 1 2 3 4 5 6 7 8]\n",
+      "[0 1]\n",
+      "[0 1]\n",
       "[0 1 2 3 4 5 6 7 8]\n"
      ]
     }
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 949,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 950,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 951,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 952,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 953,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 954,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 955,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +283,7 @@
        "1           232                  39     2008-08-01  SDSS J0008-0004         3  "
       ]
      },
-     "execution_count": 955,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 956,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,80 +318,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 957,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RA Hrs</th>\n",
-       "      <th>RA Mins</th>\n",
-       "      <th>RA Secs</th>\n",
-       "      <th>RA [°]</th>\n",
-       "      <th>Dec Degrees</th>\n",
-       "      <th>Dec Arcmin</th>\n",
-       "      <th>Dec Arcsec</th>\n",
-       "      <th>Dec [°]</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Coordinates:</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Manual</th>\n",
-       "      <td>00</td>\n",
-       "      <td>08</td>\n",
-       "      <td>2.96</td>\n",
-       "      <td>2.01231</td>\n",
-       "      <td>-00</td>\n",
-       "      <td>04</td>\n",
-       "      <td>8.26</td>\n",
-       "      <td>-0.06896</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "0            RA Hrs RA Mins RA Secs   RA [°] Dec Degrees Dec Arcmin  \\\n",
-       "Coordinates:                                                          \n",
-       "Manual           00      08    2.96  2.01231         -00         04   \n",
-       "\n",
-       "0            Dec Arcsec   Dec [°]  \n",
-       "Coordinates:                       \n",
-       "Manual             8.26  -0.06896  "
-      ]
-     },
-     "execution_count": 957,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'[2] not found in axis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-c6463557acd7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcoordinates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-8f2bd23525e6>\u001b[0m in \u001b[0;36mcoordinates\u001b[0;34m(df_list)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcoordinates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcoords_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpick_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Coordinates:'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#.drop(2, axis=1)  # Manual coordinates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mcoords_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mcoords_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoords_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcoords_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Coordinates:'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Manual'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   3695\u001b[0m                                            \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3696\u001b[0m                                            \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3697\u001b[0;31m                                            errors=errors)\n\u001b[0m\u001b[1;32m   3698\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3699\u001b[0m     @rewrite_axis_style_signature('mapper', [('copy', True),\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   3109\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3110\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3111\u001b[0;31m                 \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3113\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[0;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[1;32m   3141\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3142\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3143\u001b[0;31m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3144\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, errors)\u001b[0m\n\u001b[1;32m   4402\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'ignore'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4403\u001b[0m                 raise KeyError(\n\u001b[0;32m-> 4404\u001b[0;31m                     '{} not found in axis'.format(labels[mask]))\n\u001b[0m\u001b[1;32m   4405\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4406\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: '[2] not found in axis'"
+     ]
     }
    ],
    "source": [
