--- a/Database/Integration.ipynb
+++ b/Database/Integration.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "[143 rows x 22 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
        "0  151.143143  41.212109          2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,17 +1048,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fun(element):\n",
+    "#def fun(element):\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1092,36 +1092,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>106</td>\n",
-       "      <td>11.012080</td>\n",
-       "      <td>1.220180</td>\n",
+       "      <td>11.012080000000001</td>\n",
+       "      <td>1.2201799999999998</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>11</td>\n",
-       "      <td>45.628750</td>\n",
-       "      <td>0.100583</td>\n",
+       "      <td>45.62874999999999</td>\n",
+       "      <td>0.10058333333333334</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>123</td>\n",
-       "      <td>43.188380</td>\n",
-       "      <td>0.666210</td>\n",
+       "      <td>43.18838</td>\n",
+       "      <td>0.6662100000000001</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>139</td>\n",
-       "      <td>138.022120</td>\n",
-       "      <td>0.483660</td>\n",
+       "      <td>138.02212</td>\n",
+       "      <td>0.48366000000000003</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>38</td>\n",
        "      <td>152.872875</td>\n",
-       "      <td>1.723139</td>\n",
+       "      <td>1.723138888888889</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1132,63 +1132,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>145</th>\n",
+       "      <th>296</th>\n",
        "      <td>33</td>\n",
-       "      <td>148.750042</td>\n",
-       "      <td>-1.501389</td>\n",
+       "      <td>148.75004166666665</td>\n",
+       "      <td>-1.5013888888888889</td>\n",
        "      <td>134</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>146</th>\n",
+       "      <th>297</th>\n",
        "      <td>134</td>\n",
        "      <td>133.693954</td>\n",
-       "      <td>-1.360300</td>\n",
+       "      <td>-1.3602999</td>\n",
        "      <td>135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147</th>\n",
+       "      <th>298</th>\n",
        "      <td>136</td>\n",
-       "      <td>136.033203</td>\n",
-       "      <td>-0.998014</td>\n",
+       "      <td>136.03320300000001</td>\n",
+       "      <td>-0.9980139000000001</td>\n",
        "      <td>136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>148</th>\n",
+       "      <th>299</th>\n",
        "      <td>78</td>\n",
-       "      <td>248.240333</td>\n",
-       "      <td>-0.555861</td>\n",
+       "      <td>248.24033333333333</td>\n",
+       "      <td>-0.5558611111111111</td>\n",
        "      <td>137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>149</th>\n",
+       "      <th>300</th>\n",
        "      <td>55</td>\n",
-       "      <td>186.533750</td>\n",
-       "      <td>-0.100556</td>\n",
+       "      <td>186.53374999999997</td>\n",
+       "      <td>-0.10055555555555556</td>\n",
        "      <td>138</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>150 rows × 4 columns</p>\n",
+       "<p>301 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id          ra       dec  cluster\n",
-       "0    106   11.012080  1.220180        1\n",
-       "1     11   45.628750  0.100583        2\n",
-       "2    123   43.188380  0.666210        3\n",
-       "3    139  138.022120  0.483660        4\n",
-       "4     38  152.872875  1.723139        5\n",
-       "..   ...         ...       ...      ...\n",
-       "145   33  148.750042 -1.501389      134\n",
-       "146  134  133.693954 -1.360300      135\n",
-       "147  136  136.033203 -0.998014      136\n",
-       "148   78  248.240333 -0.555861      137\n",
-       "149   55  186.533750 -0.100556      138\n",
+       "      id                  ra                   dec cluster\n",
+       "0    106  11.012080000000001    1.2201799999999998       1\n",
+       "1     11   45.62874999999999   0.10058333333333334       2\n",
+       "2    123            43.18838    0.6662100000000001       3\n",
+       "3    139           138.02212   0.48366000000000003       4\n",
+       "4     38          152.872875     1.723138888888889       5\n",
+       "..   ...                 ...                   ...     ...\n",
+       "296   33  148.75004166666665   -1.5013888888888889     134\n",
+       "297  134          133.693954            -1.3602999     135\n",
+       "298  136  136.03320300000001   -0.9980139000000001     136\n",
+       "299   78  248.24033333333333   -0.5558611111111111     137\n",
+       "300   55  186.53374999999997  -0.10055555555555556     138\n",
        "\n",
-       "[150 rows x 4 columns]"
+       "[301 rows x 4 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,8 +1197,8 @@
     "nac = pd.read_csv('clusters.csv')\n",
     "nac\n",
     "\n",
-    "for index, row in nac.iterrows():\n",
-    "    if row[\"cluster\"] == row[\"last cluster\"]:\n",
+    "#for index, row in nac.iterrows():\n",
+    " #   if row[\"cluster\"] == row[\"last cluster\"]:\n",
     "        "
    ]
   },
