--- a/Database/Integration.ipynb
+++ b/Database/Integration.ipynb
@@ -11,21 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'astropy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-b5a269a6b3a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mastropy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoordinates\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAngle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'astropy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from astropy.coordinates import Angle\n",
@@ -6624,14 +6612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating dataframe with blf simulations: catalog + img paths\n",
     "def blf_train_df():\n",
     "    #blf_train_path = '/home/viviane/BLF_training'\n",
-    "    blf_train_path = '/prj/prjpes/vivianemm/BLF'\n",
+    "    blf_train_path = '/home/vivianemm/BLF'\n",
     "    \n",
     "    #blf = pd.read_csv(blf_train_path + '/traintest.csv', comment='#')\n",
     "    blf = pd.read_csv(blf_train_path + '/BLF_catalog.csv', comment='#')\n",
@@ -6641,16 +6629,16 @@
     "    # Adding columns with paths for images in the 4 filters: img_path_H, img_path_J, img_path_VIS, img_path_Y\n",
     "    for filter in ['H', 'J', 'VIS', 'Y']:\n",
     "        path = blf_train_path + '/Images/EUC_{}/imageEUC_{}-'.format(filter, filter)\n",
-    "        blf['img_path_{}'.format(filter)] = [path + '{}.fits'.format(id) for id in ids]\n",
+    "        blf['img_path_{}'.format(filter)] = [path + '{}.fits.png'.format(id) for id in ids]\n",
     "        \n",
-    "    #blf.to_csv('blf_train.csv', index=False)\n",
+    "    blf.to_csv('blf_complete.csv', index=False)\n",
     "    \n",
     "    return blf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6659,7 +6647,7 @@
        "100000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6667,6 +6655,243 @@
    "source": [
     "blf = blf_train_df()\n",
     "len(blf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>x_crit</th>\n",
+       "      <th>y_crit</th>\n",
+       "      <th>source_ID</th>\n",
+       "      <th>z_source</th>\n",
+       "      <th>z_lens</th>\n",
+       "      <th>mag_source</th>\n",
+       "      <th>ein_area</th>\n",
+       "      <th>n_crit</th>\n",
+       "      <th>r_source</th>\n",
+       "      <th>...</th>\n",
+       "      <th>n_gal_5</th>\n",
+       "      <th>n_gal_10</th>\n",
+       "      <th>halo_mass</th>\n",
+       "      <th>star_mass</th>\n",
+       "      <th>mag_lens</th>\n",
+       "      <th>n_sources</th>\n",
+       "      <th>img_path_H</th>\n",
+       "      <th>img_path_J</th>\n",
+       "      <th>img_path_VIS</th>\n",
+       "      <th>img_path_Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4719</th>\n",
+       "      <td>200001</td>\n",
+       "      <td>3.467590e-07</td>\n",
+       "      <td>1.388970e-07</td>\n",
+       "      <td>5131</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>0.699792</td>\n",
+       "      <td>22.0469</td>\n",
+       "      <td>3.714770e-10</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.046820e+13</td>\n",
+       "      <td>6.426010e+11</td>\n",
+       "      <td>20.2312</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5721</th>\n",
+       "      <td>200002</td>\n",
+       "      <td>2.440650e-07</td>\n",
+       "      <td>-2.128040e-07</td>\n",
+       "      <td>7183</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>0.522781</td>\n",
+       "      <td>25.4845</td>\n",
+       "      <td>5.677310e-10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.027460e+14</td>\n",
+       "      <td>8.192230e+11</td>\n",
+       "      <td>18.9784</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3090</th>\n",
+       "      <td>200003</td>\n",
+       "      <td>4.086340e-07</td>\n",
+       "      <td>2.556650e-07</td>\n",
+       "      <td>4746</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>0.684567</td>\n",
+       "      <td>25.4078</td>\n",
+       "      <td>1.857780e-09</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4.105040e+14</td>\n",
+       "      <td>1.151740e+12</td>\n",
+       "      <td>19.2772</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4786</th>\n",
+       "      <td>200004</td>\n",
+       "      <td>7.584890e-08</td>\n",
+       "      <td>-1.600640e-08</td>\n",
+       "      <td>4426</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>0.540055</td>\n",
+       "      <td>25.6997</td>\n",
+       "      <td>7.307720e-10</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.729910e+14</td>\n",
+       "      <td>4.497190e+11</td>\n",
+       "      <td>19.1146</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2874</th>\n",
+       "      <td>200005</td>\n",
+       "      <td>2.980050e-07</td>\n",
+       "      <td>3.114750e-07</td>\n",
+       "      <td>3389</td>\n",
+       "      <td>2.62</td>\n",
+       "      <td>0.734329</td>\n",
+       "      <td>26.0315</td>\n",
+       "      <td>6.982860e-10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7.507740e+13</td>\n",
+       "      <td>8.194420e+11</td>\n",
+       "      <td>20.3108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...</td>\n",
+       "      <td>/home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID        x_crit        y_crit  source_ID  z_source    z_lens  \\\n",
+       "4719  200001  3.467590e-07  1.388970e-07       5131      1.96  0.699792   \n",
+       "5721  200002  2.440650e-07 -2.128040e-07       7183      1.96  0.522781   \n",
+       "3090  200003  4.086340e-07  2.556650e-07       4746      2.10  0.684567   \n",
+       "4786  200004  7.584890e-08 -1.600640e-08       4426      1.93  0.540055   \n",
+       "2874  200005  2.980050e-07  3.114750e-07       3389      2.62  0.734329   \n",
+       "\n",
+       "      mag_source      ein_area  n_crit  r_source  ...  n_gal_5  n_gal_10  \\\n",
+       "4719     22.0469  3.714770e-10      19  0.000003  ...        2         5   \n",
+       "5721     25.4845  5.677310e-10      12  0.000003  ...        0         4   \n",
+       "3090     25.4078  1.857780e-09      41  0.000017  ...        2        10   \n",
+       "4786     25.6997  7.307720e-10      24  0.000015  ...        4         9   \n",
+       "2874     26.0315  6.982860e-10      23  0.000006  ...        3         9   \n",
+       "\n",
+       "         halo_mass     star_mass  mag_lens  n_sources  \\\n",
+       "4719  5.046820e+13  6.426010e+11   20.2312          1   \n",
+       "5721  1.027460e+14  8.192230e+11   18.9784          1   \n",
+       "3090  4.105040e+14  1.151740e+12   19.2772          0   \n",
+       "4786  1.729910e+14  4.497190e+11   19.1146          1   \n",
+       "2874  7.507740e+13  8.194420e+11   20.3108          1   \n",
+       "\n",
+       "                                             img_path_H  \\\n",
+       "4719  /home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...   \n",
+       "5721  /home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...   \n",
+       "3090  /home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...   \n",
+       "4786  /home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...   \n",
+       "2874  /home/vivianemm/BLF/Images/EUC_H/imageEUC_H-20...   \n",
+       "\n",
+       "                                             img_path_J  \\\n",
+       "4719  /home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...   \n",
+       "5721  /home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...   \n",
+       "3090  /home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...   \n",
+       "4786  /home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...   \n",
+       "2874  /home/vivianemm/BLF/Images/EUC_J/imageEUC_J-20...   \n",
+       "\n",
+       "                                           img_path_VIS  \\\n",
+       "4719  /home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...   \n",
+       "5721  /home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...   \n",
+       "3090  /home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...   \n",
+       "4786  /home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...   \n",
+       "2874  /home/vivianemm/BLF/Images/EUC_VIS/imageEUC_VI...   \n",
+       "\n",
+       "                                             img_path_Y  \n",
+       "4719  /home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...  \n",
+       "5721  /home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...  \n",
+       "3090  /home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...  \n",
+       "4786  /home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...  \n",
+       "2874  /home/vivianemm/BLF/Images/EUC_Y/imageEUC_Y-20...  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blf.head()"
    ]
   },
   {
@@ -6713,18 +6938,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
   }
  },
  "nbformat": 4,
