--- a/DL.ipynb
+++ b/DL.ipynb
@@ -921,10 +921,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_loss(model):\n",
+    "def plot_loss(model_H):\n",
     "    \n",
-    "    plt.plot(np.arange(0, 30), history.history[\"loss\"], label = \"training loss\")\n",
-    "    plt.plot(np.arange(0, 30), history.history[\"val_loss\"], label = \"Validation loss\")\n",
+    "    plt.plot(np.arange(0, 30), model_H.history[\"loss\"], label = \"training loss\")\n",
+    "    plt.plot(np.arange(0, 30), model_H.history[\"val_loss\"], label = \"Validation loss\")\n",
     "    plt.xlabel(\"Epoch\")\n",
     "    plt.legend(loc=\"upper left\")\n",
     "    plt.show()\n",
